--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,10 @@
 <resources>
-    <string name="app_name">TestQDownloader</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">Landscape Connect</string>
     <string name="action_settings">Settings</string>
     <string name="action_delete">Delete</string>
     <string name="questionnaires">Questionnaires</string>
     <string name="scan_qr_code">Scan a QR code</string>
     <string name="space_selected">" selected"</string>
-    <string name="title">Landscape Connect</string>
 
     <string name="add_code_dialog_title">Add from Code</string>
     <string name="add_code_dialog_content">Please add the 5 character Landscape Connect code</string>
