Add upload menu button to Sections

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="please_wait">Please wait</string>
     <string name="new_landscape">New Landscape</string>
 
+    <string name="upload">Upload</string>
 </resources>
