--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,8 @@
 
 
     <string name="upload">Upload</string>
+    <string name="drawer_questionnaires">Questionnaires</string>
+    <string name="drawer_queue">Upload Queue</string>
+    <string name="drawer_settings">Settings</string>
+    <string name="drawer_about">About</string>
 </resources>
