--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="downloading_questionnaire">Downloading Questionnaire</string>
     <string name="please_wait">Please wait</string>
     <string name="new_landscape">New Landscape</string>
-    <string name="new_landscape_title">Add New Landscape</string>
+    <string name="new_landscape_title">Add new landscape</string>
     <string name="new_landscape_subtitle">Welcome to the Natural England questionnaire. \n Let us walk you through the steps of sharing your landscape with us.</string>
     <string name="new_landscape_take_photo_button">Take Photo</string>
 
