Switch to using real data in uploads queue

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
 
     <string name="question_sections">Question sections</string>
 
+    <string name="upload_queue">"Upload Queue"</string>
 
     <string name="upload">Upload</string>
     <string name="drawer_questionnaires">Questionnaires</string>
