--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,8 +19,6 @@
     <string name="downloading_questionnaire">Downloading Questionnaire</string>
     <string name="please_wait">Please wait</string>
     <string name="new_landscape">New Landscape</string>
-    <string name="new_landscape_title">Add new landscape</string>
-    <string name="new_landscape_subtitle">Welcome to the Natural England questionnaire. \n Let us walk you through the steps of sharing your landscape with us.</string>
     <string name="new_landscape_take_photo_button">Take Photo</string>
 
     <string name="done">Done</string>
@@ -28,11 +26,14 @@
 
     <string name="question_sections">Question sections</string>
 
-    <string name="upload_queue">"Upload Queue"</string>
+    <string name="upload_queue">Upload Queue</string>
 
     <string name="upload">Upload</string>
     <string name="drawer_questionnaires">Questionnaires</string>
     <string name="drawer_queue">Upload Queue</string>
     <string name="drawer_settings">Settings</string>
     <string name="drawer_about">About</string>
+    <string name="failed_to_download">Failed to download</string>
+    <string name="get_location">getting location</string>
+    <string name="fa_compass_spin">" {fa-compass spin}"</string>
 </resources>
