--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,7 @@
     <string name="failed_to_download">Failed to download</string>
     <string name="get_location">getting location</string>
     <string name="fa_compass_spin">" {fa-compass spin}"</string>
+    <string name="about">About</string>
+    <string name="about_title">Landscape Connect</string>
+    <string name="about_description">"Landscape Connect is developed by Rate my View as a companion product to allow greater understanding of landscape perceptions. It can be used by landscape stakeholders instead of traditional questionnaires.\nThe app allows clearer data and results to be gathered in a faster and more effecient way over paper and clipboard methods.\nInstall a questionnaire to get started."</string>
 </resources>
