--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+    <string name="download_url">http://3equals.co.uk/lc-json/</string>
+    <string name="user_agent_http">LandscapeConnectV1</string>
     <string name="app_name">Landscape Connect</string>
     <string name="action_settings">Settings</string>
     <string name="action_delete">Delete</string>
@@ -25,6 +27,7 @@
     <string name="next">Next</string>
 
     <string name="question_sections">Question sections</string>
+    <string name="please_complete">"Please complete all required questions</string>
 
     <string name="upload_queue">Upload Queue</string>
 
