--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,12 +9,12 @@
     <string name="space_selected">" selected"</string>
 
     <string name="add_code_dialog_title">Add from Code</string>
-    <string name="add_code_dialog_content">Please add the 5 character Landscape Connect code</string>
-    <string name="add_code_dialog_hint">#####</string>
+    <string name="add_code_dialog_content">Please add the 6 character Landscape Connect code</string>
+    <string name="add_code_dialog_hint">######</string>
     <string name="add_code_dialog_prefill">""</string>
 
     <string name="delete_dialog_title">Delete</string>
-    <string name="delete_dialog_content">Are you sure you want to delete these Questionnaires</string>
+    <string name="delete_dialog_content">Pending uploads for these questionnaires will also be deleted. \nAre you sure you want to continue?</string>
     <string name="delete_dialog_positive">Delete</string>
     <string name="delete_dialog_negative">Cancel</string>
 
