--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,9 @@
 
     <string name="done">Done</string>
     <string name="next">Next</string>
+    <string name="previous">Previous</string>
+    <string name="back">Back</string>
+    <string name="letsgo">Lets go!</string>
 
     <string name="question_sections">Question sections</string>
     <string name="please_complete">"Please complete all required questions</string>
@@ -45,10 +48,13 @@
     <string name="upload_queue">Upload Queue</string>
 
     <string name="upload">Upload</string>
+
     <string name="drawer_questionnaires">Questionnaires</string>
     <string name="drawer_queue">Upload Queue</string>
     <string name="drawer_settings">Settings</string>
     <string name="drawer_about">About</string>
+    <string name="drawer_how_it_works">How it works</string>
+
     <string name="failed_to_download">Failed to download</string>
     <string name="get_location">getting location</string>
     <string name="fa_compass_spin">" {fa-compass spin}"</string>
