--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,17 +88,17 @@
 
     <!-- Intro strings -->
     <string name="intro_1_title">Landscape Connect</string>
-    <string name="intro_1_subtitle">Engage with users of your landscape</string>
+    <string name="intro_1_subtitle">Engage with your Landscape</string>
 
-    <string name="intro_2_title">Download a questionnaire</string>
-    <string name="intro_2_subtitle">Find them on our website then scan a QR code or enter a short code to install</string>
+    <string name="intro_2_title">Install a questionnaire</string>
+    <string name="intro_2_subtitle">Scan a Landscape Connect barcode or enter the short code of a questionnaire to install it</string>
 
     <string name="intro_3_title">Complete questionnaire</string>
-    <string name="intro_3_subtitle">Take a photo and answer questions</string>
+    <string name="intro_3_subtitle">Take a photo and answer the associated questions</string>
 
-    <string name="intro_4_title">Background upload</string>
-    <string name="intro_4_subtitle">Completed questionnaires are automatically uploaded</string>
+    <string name="intro_4_title">Automatic upload</string>
+    <string name="intro_4_subtitle">"Completed questionnaires are uploaded in the background when you're in signal range."</string>
 
     <string name="intro_5_title">Engage</string>
-    <string name="intro_5_subtitle">Optionally view aggregate results</string>
+    <string name="intro_5_subtitle">"Optionally view yours and other's results online"</string>
 </resources>
