--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,6 +64,7 @@
     <string name="got_location">got location</string>
     <string name="fa_compass_spin">" {fa-compass spin}"</string>
     <string name="fa_check">" {fa-check}"</string>
+    <string name="fa_cross">" {fa-times}"</string>
     <string name="about">About</string>
     <string name="about_title">Landscape Connect</string>
     <string name="about_description">"Landscape Connect is developed by the Rate my View team as a companion product to Rate my View. \n\n It allows greater understanding of landscape perceptions by supporting tailored questions. It can be used by landscape stakeholders instead of traditional questionnaires.\n\nThe app allows clearer data and results to be gathered in a faster and more efficient way over paper and clipboard methods.\n\nInstall a questionnaire to get started."</string>
@@ -75,6 +76,9 @@
     <string name="upload_queue_empty">Complete a questionnaire\n to see it in the upload queue</string>
     <string name="questionnaires_empty">Install a questionnaire to get started! \n \n Go to http://landscape-connect.com/app/#/page/questionnaires \n \n Or click the + below</string>
 
+    <string name="uses_location">Uses location</string>
+    <string name="uses_photo">Uses photo</string>
+    <string name="public_data">Public data</string>
 
 
     <!--Content description strings-->
