--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,11 +20,11 @@
     <string name="delete_dialog_negative">Cancel</string>
 
     <!-- Questionnaire Page -->
-    <string name="downloaded">Downloaded:</string>
-    <string name="published">Published:</string>
-    <string name="description">Description:</string>
-    <string name="shortcode">Short code:</string>
-    <string name="website">Find out more about this questionnaire:</string>
+    <string name="downloaded">Downloaded</string>
+    <string name="published">Published</string>
+    <string name="description">Description</string>
+    <string name="shortcode">Short code</string>
+    <string name="website">Website</string>
     <string name="pending_uploads">Pending upload(s)</string>
 
 
