--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="download_url_fragment">questionnaires/</string>
     <string name="base_url">http://landscape-connect.com/</string>
     <string name="user_agent_http">LandscapeConnectV1</string>
+    <string name="questionnaire_gallery_url">http://landscape-connect.com/app/#/page/questionnaires</string>
     <string name="app_name">Landscape Connect</string>
     <string name="action_settings">Settings</string>
     <string name="action_delete">Delete</string>
